HelpMePlay | 1.0.7
	Torghast:
		- Anima Powers across all tiers are now auto selected for the Hunter class.
		- Added a note to the Levers for the Lever-Locked Chest to identify a quick order to solve the puzzle.